force-app/main/default/objects/Apttus__TemplateVersion__c/Apttus__TemplateVersion__c.object-meta.xml
<CustomObject>
    <description>Holds various versions of this template and is a Master-detail to Template</description>
    <label>Template Version</label>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>