force-app/main/default/objects/Apttus__TemplateVersion__c/fields/Apttus__Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comments__c</fullName>
    <description>User comments for this version</description>
    <inlineHelpText>User comments for this version</inlineHelpText>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>