force-app/main/default/objects/Apttus__TemplateVersion__c/fields/Apttus__Mergefields2__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Mergefields2__c</fullName>
    <description>Template merge fields</description>
    <inlineHelpText>Template merge fields</inlineHelpText>
    <label>Mergefields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>