force-app/main/default/objects/Apttus__TemplateVersion__c/fields/Apttus__Mergefields__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Mergefields__c</fullName>
    <description>Template merge fields internal</description>
    <inlineHelpText>Template merge fields internal</inlineHelpText>
    <label>Mergefields (Internal)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>