force-app/main/default/objects/Apttus__TemplateVersion__c/fields/Apttus__ParentVersion__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ParentVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Version from which the current version is created</description>
    <label>Parent Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Template Versions</relationshipLabel>
    <relationshipName>TemplateVersions</relationshipName>
    <type>Lookup</type>
</CustomField>