force-app/main/default/objects/Apttus__TemplateVersion__c/fields/Apttus__TextContent__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TextContent__c</fullName>
    <description>Text content of the template</description>
    <inlineHelpText>Text content of the template</inlineHelpText>
    <label>Text Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>