force-app/main/default/objects/Apttus__TemplateVersion__c/fields/Apttus__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionNumber__c</fullName>
    <description>Represents version number of this record</description>
    <inlineHelpText>Represents version number of this record</inlineHelpText>
    <label>Version Number</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>